# distance-benchmarks

./: .gitignore  DistanceBenchmarks.cabal  README.md  analysis.ipynb  analysis.md  input.csv  package.json  results50.csv  results500.csv  simple.cabal  tsconfig.json
src/: Google.hs  Haversine.hs  Main.hs  Mapbox.hs  Taxicab.hs  Units.hs  index.ts  types.d.ts  util.ts
src/calculators/: google.ts  haversine.ts  index.ts  mapbox.ts
