name:                distance-benchmarks
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bcherny/distance-benchmarks#readme
license:             MIT
license-file:        LICENSE
author:              Boris Cherny
maintainer:          boris@performancejs.com
copyright:           2017 Boris Cherny
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Main
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable simple-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , simple
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bcherny/distance-benchmarks
